框架结构大调整

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,10 @@
 <html>
 	<head>
-		<title> Here is the BarChart demo </title>
-		<link rel="stylesheet" type="text/css" href="./example/serierschart/serierschart.css" />
-		<style>
-			.serierschart {
-				position : absolute;
-				width : 90%;
-				height : 500px;
-				left : 50px;
-				top : 50px;		
-			}
-		</style>
-	</head>	
+		<title> Here is the PieChart demo </title>
+		<link rel="stylesheet" type="text/css" href="style/style.css" />
+	</head>
 	<body>
-		<div class="serierschart"></div>
-		<button id="anmationplay">Play</button>
-		<button id="stopAnmationplay">Stop Play</button>
-		<script data-main="./chart.min.js" src="3rdlib/require.js"></script>
+		<div class="web-chart-wrapper"></div>
 	</body>
+	<script data-main="js/main.js" src="3rdlib/require.js"></script>
 </html>
